inclusão de eventos mousedown - mousemove - mouseup

--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="Slide curso JavaScript" href="css/style.css">
+  <title>Slide curso JavaScript</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+  <div class="slide-wrapper">
+    <ul class="slide">
+      <li><img src="/img/1.png" alt=""></li>
+      <li><img src="/img/2.png" alt=""></li>
+      <li><img src="/img/3.png" alt=""></li>
+      <li><img src="/img/4.png" alt=""></li>
+      <li><img src="/img/5.png" alt=""></li>
+    </ul>
+  </div>
   <script type="module" src="/js/script.js"></script>
 </body>
 
