--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
 </head>
 
 <body>
+  <ul class="custom-control">
+    <li>
+      <img src="/img/1.png" alt="">
+    </li>
+    <li>
+      <img src="/img/2.png" alt="">
+    </li>
+    <li>
+      <img src="/img/3.png" alt="">
+    </li>
+    <li>
+      <img src="/img/4.png" alt="">
+    </li>
+    <li>
+      <img src="/img/5.png" alt="">
+    </li>
+
+  </ul>
   <div class="slide-wrapper">
     <ul class="slide">
       <li><img src="/img/1.png" alt=""></li>
@@ -19,8 +37,8 @@
     </ul>
   </div>
   <div class="arrow-nav">
-    <button class="prev">Prev</button>
-    <button class="next">Next</button>
+    <button class="prev"></button>
+    <button class="next"></button>
   </div>
   <script type="module" src="/js/script.js"></script>
 </body>
