changed path of images

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
   <ul class="custom-control">
     <li>
-      <img src="/img/1.png" alt="">
+      <img src="img/1.png" alt="">
     </li>
     <li>
-      <img src="/img/2.png" alt="">
+      <img src="./img/2.png" alt="">
     </li>
     <li>
       <img src="/img/3.png" alt="">
