--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
       <img src="img/1.png" alt="">
     </li>
     <li>
-      <img src="./img/2.png" alt="">
+      <img src="img/2.png" alt="">
     </li>
     <li>
-      <img src="/img/3.png" alt="">
+      <img src="img/3.png" alt="">
     </li>
     <li>
-      <img src="/img/4.png" alt="">
+      <img src="img/4.png" alt="">
     </li>
     <li>
-      <img src="/img/5.png" alt="">
+      <img src="img/5.png" alt="">
     </li>
 
   </ul>
   <div class="slide-wrapper">
     <ul class="slide">
-      <li><img src="/img/1.png" alt=""></li>
-      <li><img src="/img/2.png" alt=""></li>
-      <li><img src="/img/3.png" alt=""></li>
-      <li><img src="/img/4.png" alt=""></li>
-      <li><img src="/img/5.png" alt=""></li>
+      <li><img src="img/1.png" alt=""></li>
+      <li><img src="img/2.png" alt=""></li>
+      <li><img src="img/3.png" alt=""></li>
+      <li><img src="img/4.png" alt=""></li>
+      <li><img src="img/5.png" alt=""></li>
     </ul>
   </div>
   <div class="arrow-nav">
     <button class="prev"></button>
     <button class="next"></button>
   </div>
-  <script type="module" src="/js/script.js"></script>
+  <script type="module" src="js/script.js"></script>
 </body>
 
 </html>
